deploy: b8d4695e8cea0d38cda2e66d5079981e6d35ac62

--- a/en/index.html
+++ b/en/index.html
@@ -432,7 +432,7 @@
         <h5 class="title">T-Road and Zero Trust</h5>
         <p class='content container'>
            
-               Triple verification of identity, equipment, and behavior patterns, even for the head of the agency.
+               Triple verification of identity, equipment, and behavior patterns, even the head of the agency.
            
         </p>
       </a>
