deploy: f879367cc6137d7ab8c32b3a5e72b37df8b2d1c2

--- a/zh-TW/contact/index.html
+++ b/zh-TW/contact/index.html
@@ -225,6 +225,63 @@
     </div>
   </div>
   
+  <div class="card-panel grey lighten-5 z-depth-1 grid-item">
+    <div class="row" style="margin: 0 -1em;">
+      <div class="col s4">
+        <img src="https://en.gravatar.com/userimage/3207161/597aecfb201a166859e45893e2b32f20.png" alt="練喆明" class="circle responsive-img">
+      </div>
+      <div class="col s8">
+        <h6><span>練喆明</span> <span>Matthew Lien (BlueT)</span></h6>
+        <p>Head of Resilient Architecture 韌性架構總顧問</p>
+        <div>
+          <a href="" target="_blank" title="wiselike" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-commenting"></i></a>
+          <a href="mailto:bluet@pdis.nat.gov.tw" target="_blank" title="email" class="white btn-floating btn-flat btn-small waves-effect "><i class="orange-text fa fa-envelope"></i></a>
+          <a href="https://twitter.com/BlueT" target="_blank" title="twitter" class="white btn-floating btn-flat btn-small waves-effect "><i class="cyan-text fa fa-twitter"></i></a>
+          <a href="https://www.facebook.com/BlueT.M.Lien" target="_blank" title="facebook" class="white btn-floating btn-flat btn-small waves-effect "><i class="blue-text fa fa-facebook"></i></a>
+          <a href="" target="_blank" title="instagram" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="card-panel grey lighten-5 z-depth-1 grid-item">
+    <div class="row" style="margin: 0 -1em;">
+      <div class="col s4">
+        <img src="https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/zach/800/589_1.png" alt="黃子維" class="circle responsive-img">
+      </div>
+      <div class="col s8">
+        <h6><span>黃子維</span> <span>Zach Huang</span></h6>
+        <p></p>
+        <div>
+          <a href="" target="_blank" title="wiselike" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-commenting"></i></a>
+          <a href="mailto:" target="_blank" title="email" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-envelope"></i></a>
+          <a href="" target="_blank" title="twitter" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-twitter"></i></a>
+          <a href="" target="_blank" title="facebook" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-facebook"></i></a>
+          <a href="" target="_blank" title="instagram" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="card-panel grey lighten-5 z-depth-1 grid-item">
+    <div class="row" style="margin: 0 -1em;">
+      <div class="col s4">
+        <img src="https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/bobby/800/4074_1.png" alt="魏守斌" class="circle responsive-img">
+      </div>
+      <div class="col s8">
+        <h6><span>魏守斌</span> <span>Shou-Bin Wei</span></h6>
+        <p></p>
+        <div>
+          <a href="" target="_blank" title="wiselike" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-commenting"></i></a>
+          <a href="mailto:" target="_blank" title="email" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-envelope"></i></a>
+          <a href="" target="_blank" title="twitter" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-twitter"></i></a>
+          <a href="" target="_blank" title="facebook" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-facebook"></i></a>
+          <a href="" target="_blank" title="instagram" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </div>
 
 <h3 class="center">前任成員</h3>
@@ -243,25 +300,6 @@
       </div>
       <div class="col s8">
         <h6><span>葉寧</span> <span>Ning Yeh</span></h6>
-        <p></p>
-        <div>
-          <a href="" target="_blank" title="wiselike" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-commenting"></i></a>
-          <a href="mailto:" target="_blank" title="email" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-envelope"></i></a>
-          <a href="" target="_blank" title="twitter" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-twitter"></i></a>
-          <a href="" target="_blank" title="facebook" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-facebook"></i></a>
-          <a href="" target="_blank" title="instagram" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-instagram"></i></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <div class="card-panel grey lighten-5 z-depth-1 grid-item">
-    <div class="row" style="margin: 0 -1em;">
-      <div class="col s4">
-        <img src="https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/zach/800/589_1.png" alt="黃子維" class="circle responsive-img">
-      </div>
-      <div class="col s8">
-        <h6><span>黃子維</span> <span>Zach Huang</span></h6>
         <p></p>
         <div>
           <a href="" target="_blank" title="wiselike" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-commenting"></i></a>
@@ -319,25 +357,6 @@
       </div>
       <div class="col s8">
         <h6><span>蕭郁溏</span> <span></span></h6>
-        <p></p>
-        <div>
-          <a href="" target="_blank" title="wiselike" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-commenting"></i></a>
-          <a href="mailto:" target="_blank" title="email" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-envelope"></i></a>
-          <a href="" target="_blank" title="twitter" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-twitter"></i></a>
-          <a href="" target="_blank" title="facebook" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-facebook"></i></a>
-          <a href="" target="_blank" title="instagram" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-instagram"></i></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <div class="card-panel grey lighten-5 z-depth-1 grid-item">
-    <div class="row" style="margin: 0 -1em;">
-      <div class="col s4">
-        <img src="https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/bobby/800/4074_1.png" alt="魏守斌" class="circle responsive-img">
-      </div>
-      <div class="col s8">
-        <h6><span>魏守斌</span> <span>Shou-Bin Wei</span></h6>
         <p></p>
         <div>
           <a href="" target="_blank" title="wiselike" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-commenting"></i></a>
