deploy: 481e12433b6a1146b142fd46518cc95d3c51d586

--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -247,6 +247,25 @@
   <div class="card-panel grey lighten-5 z-depth-1 grid-item">
     <div class="row" style="margin: 0 -1em;">
       <div class="col s4">
+        <img src="https://pdis.nat.gov.tw/assets/avatar/kiang.jpg" alt="江明宗" class="circle responsive-img">
+      </div>
+      <div class="col s8">
+        <h6><span>江明宗</span> <span>Finjon Kinag (kiang)</span></h6>
+        <p>Head of Application Architecture 應用架構總顧問</p>
+        <div>
+          <a href="" target="_blank" title="wiselike" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-commenting"></i></a>
+          <a href="mailto:kiang@pdis.nat.gov.tw" target="_blank" title="email" class="white btn-floating btn-flat btn-small waves-effect "><i class="orange-text fa fa-envelope"></i></a>
+          <a href="https://twitter.com/finjonkiang" target="_blank" title="twitter" class="white btn-floating btn-flat btn-small waves-effect "><i class="cyan-text fa fa-twitter"></i></a>
+          <a href="https://facebook.com/k.olc.tw" target="_blank" title="facebook" class="white btn-floating btn-flat btn-small waves-effect "><i class="blue-text fa fa-facebook"></i></a>
+          <a href="https://www.instagram.com/finjon_kiang/" target="_blank" title="instagram" class="white btn-floating btn-flat btn-small waves-effect "><i class="pink-text fa fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="card-panel grey lighten-5 z-depth-1 grid-item">
+    <div class="row" style="margin: 0 -1em;">
+      <div class="col s4">
         <img src="https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/zach/800/589_1.png" alt="黃子維" class="circle responsive-img">
       </div>
       <div class="col s8">
