--- a/zh-TW/contact/index.html
+++ b/zh-TW/contact/index.html
@@ -251,7 +251,7 @@
       </div>
       <div class="col s8">
         <h6><span>江明宗</span> <span>Finjon Kinag (kiang)</span></h6>
-        <p>Head of Application Architecture 應用架構總顧問</p>
+        <p>Head of Application Architecture 應用架構總顧問 / somebody as a nobody, nobody as a somebody</p>
         <div>
           <a href="" target="_blank" title="wiselike" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-commenting"></i></a>
           <a href="mailto:kiang@pdis.nat.gov.tw" target="_blank" title="email" class="white btn-floating btn-flat btn-small waves-effect "><i class="orange-text fa fa-envelope"></i></a>
