--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -266,6 +266,25 @@
   <div class="card-panel grey lighten-5 z-depth-1 grid-item">
     <div class="row" style="margin: 0 -1em;">
       <div class="col s4">
+        <img src="https://pdis.nat.gov.tw/assets/avatar/jedi.png" alt="林克寰" class="circle responsive-img">
+      </div>
+      <div class="col s8">
+        <h6><span>林克寰</span> <span>Jedi Lin</span></h6>
+        <p>Head of Accessibility Design 無障礙設計總顧問</p>
+        <div>
+          <a href="" target="_blank" title="wiselike" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-commenting"></i></a>
+          <a href="mailto:jedi@pdis.nat.gov.tw" target="_blank" title="email" class="white btn-floating btn-flat btn-small waves-effect "><i class="orange-text fa fa-envelope"></i></a>
+          <a href="https://twitter.com/JediLin" target="_blank" title="twitter" class="white btn-floating btn-flat btn-small waves-effect "><i class="cyan-text fa fa-twitter"></i></a>
+          <a href="" target="_blank" title="facebook" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-facebook"></i></a>
+          <a href="" target="_blank" title="instagram" class="white btn-floating btn-flat btn-small waves-effect disabled"><i class="grey-text fa fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="card-panel grey lighten-5 z-depth-1 grid-item">
+    <div class="row" style="margin: 0 -1em;">
+      <div class="col s4">
         <img src="https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/zach/800/589_1.png" alt="黃子維" class="circle responsive-img">
       </div>
       <div class="col s8">
