--- a/zh-TW/contact/index.html
+++ b/zh-TW/contact/index.html
@@ -200,7 +200,7 @@
         <h6><span>唐鳳</span> <span lang="en">Audrey Tang</span></h6>
         <p>
           <div>行政院資訊長，數位部長，資安院董事長。</div>
-          <div lang="en">Minister of Digital Affairs, Chair of NICS.</div>
+          <div lang="en">Chief Information Officer, Executive Yuan. Minister of Digital Affairs. Chair of National Institute of Cyber Security.</div>
         </p>
         <div>
           
