--- a/zh-TW/contact/index.html
+++ b/zh-TW/contact/index.html
@@ -218,7 +218,7 @@
   <div class="card-panel grey lighten-5 z-depth-1 grid-item">
     <div class="row" style="margin: 0 -1em;">
       <div class="col s4">
-        <img src="https://en.gravatar.com/userimage/3207161/597aecfb201a166859e45893e2b32f20.png" alt="練喆明" class="circle responsive-img" loading="lazy">
+        <img src="https://pdis.nat.gov.tw/assets/avatar/bluet.jpg" alt="練喆明" class="circle responsive-img" loading="lazy">
       </div>
       <div class="col s8">
         <h6><span>練喆明</span> <span lang="en">Matthew Lien (BlueT)</span></h6>
