deploy: cd6e7738ffb319f579cdb45c4b9d048b1c953674

--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -1171,7 +1171,7 @@
   <div class="card-panel grey lighten-5 z-depth-1 grid-item">
     <div class="row" style="margin: 0 -1em;">
       <div class="col s4">
-        <img src="https://graph.facebook.com/699755368/picture?type=large" alt="蔡琬梅" class="circle responsive-img" loading="lazy">
+        <img src="https://i.imgur.com/ivrhRaN.jpeg" alt="蔡琬梅" class="circle responsive-img" loading="lazy">
       </div>
       <div class="col s8">
         <h6><span>蔡琬梅</span> <span lang="en"></span></h6>
