--- a/zh-TW/index.html
+++ b/zh-TW/index.html
@@ -204,7 +204,19 @@
         </div> -->
         <div class="swiper-slide">
           <div class="iframeWrapper">
-            <iframe scrolling="no" src="https://www.youtube.com/embed/DWDdKdWBNeU " frameborder="0"
+            <iframe scrolling="no" src="https://www.youtube.com/embed/e0iHsN0XoWs" frameborder="0"
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="iframeWrapper">
+            <iframe scrolling="no" src="https://www.youtube.com/embed/-RwgmDwcUIA" frameborder="0"
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="iframeWrapper">
+            <iframe scrolling="no" src="https://www.youtube.com/embed/DWDdKdWBNeU" frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
@@ -212,20 +224,6 @@
           <div class="iframeWrapper">
             <iframe scrolling="no" src="https://www.youtube.com/embed/4ea80jU1E4o" frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="iframeWrapper">
-            <iframe allowtransparency="true" scrolling="no"
-              src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fdigitalminister.tw%2Fvideos%2Fpicfp.100014438376965%2F774011673090105&amp;show_text=false&amp;show_captions=true&amp;appId"
-              frameborder="0"></iframe>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="iframeWrapper">
-            <iframe allowtransparency="true" scrolling="no"
-              src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fdigitalminister.tw%2Fvideos%2Fvb.100014438376965%2F477441682747107&amp;show_text=false&amp;show_captions=true&amp;appId"
-              frameborder="0"></iframe>
           </div>
         </div>
       </div>
