--- a/zh-TW/info/bluet/index.html
+++ b/zh-TW/info/bluet/index.html
@@ -7,15 +7,15 @@
     <meta property="og:title" content="" />
     <meta name="author" content="PDIS" />
     <meta property="og:locale" content="zh_TW" />
-    <link rel="canonical" href="https://pdis.nat.gov.tw/zh-TW/info/bluet" />
-    <meta property="og:url" content="https://pdis.nat.gov.tw/zh-TW/info/bluet" />
+    <link rel="canonical" href="https://pdis.nat.gov.tw/zh-TW/info/bluet/" />
+    <meta property="og:url" content="https://pdis.nat.gov.tw/zh-TW/info/bluet/" />
     <meta name="twitter:card" content="summary" />
     <meta property="twitter:title" content="" />
     <meta name="twitter:site" content="@TaiwanPDIS" />
     <meta name="twitter:creator" content="@PDIS" />
     <meta property="fb:admins" content="100014438376965" />
     <meta name="google-site-verification" content="uxXHtWt7-XyZrPJb9BznXlKOOKklt1D_TAIv1UW8VhM" />
-    <script type="application/ld+json">{"headline":"","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/pdis-logo-final-inverse.png"},"name":"PDIS"},"url":"https://pdis.nat.gov.tw/zh-TW/info/bluet","author":{"@type":"Person","name":"PDIS"},"@type":"WebPage","@context":"https://schema.org"}</script>
+    <script type="application/ld+json">{"headline":"","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/pdis-logo-final-inverse.png"},"name":"PDIS"},"url":"https://pdis.nat.gov.tw/zh-TW/info/bluet/","author":{"@type":"Person","name":"PDIS"},"@type":"WebPage","@context":"https://schema.org"}</script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
 <title>行⁠政⁠院公⁠共⁠數⁠位創⁠新⁠空⁠間</title>
@@ -111,8 +111,8 @@
   }
 </script>
 
-<li><a class="tooltipped" data-position="bottom" data-tooltip="zh-TW" href="/zh-TW/info/bluet"><span class="flag-icon flag-icon-tw flag-icon-squared"></span></a></li>
-<li><a class="tooltipped" data-position="bottom" data-tooltip="EN" href="/en/info/bluet"><span class="flag-icon flag-icon-us flag-icon-squared"></span></a></li>
+<li><a class="tooltipped" data-position="bottom" data-tooltip="zh-TW" href="/zh-TW/info/bluet/"><span class="flag-icon flag-icon-tw flag-icon-squared"></span></a></li>
+<li><a class="tooltipped" data-position="bottom" data-tooltip="EN" href="/en/info/bluet/"><span class="flag-icon flag-icon-us flag-icon-squared"></span></a></li>
     </ul>
   </div>
 </nav>
@@ -168,8 +168,8 @@
   }
 </script>
 
-<li><a class="tooltipped" data-position="bottom" data-tooltip="zh-TW" href="/zh-TW/info/bluet"><span class="flag-icon flag-icon-tw flag-icon-squared"></span></a></li>
-<li><a class="tooltipped" data-position="bottom" data-tooltip="EN" href="/en/info/bluet"><span class="flag-icon flag-icon-us flag-icon-squared"></span></a></li>
+<li><a class="tooltipped" data-position="bottom" data-tooltip="zh-TW" href="/zh-TW/info/bluet/"><span class="flag-icon flag-icon-tw flag-icon-squared"></span></a></li>
+<li><a class="tooltipped" data-position="bottom" data-tooltip="EN" href="/en/info/bluet/"><span class="flag-icon flag-icon-us flag-icon-squared"></span></a></li>
 </ul>
 
     
