deploy: 83b68f9e16fc33da71aaca79196d97ca2d2936da

--- a/en/index.html
+++ b/en/index.html
@@ -427,10 +427,10 @@
             2023-05-02
           </time>
         </span>
-        <h5 class="title">Data governance is wise, data public welfare is reasonable</h5>
+        <h5 class="title">Informed Data Governance, Rational Data Altruism</h5>
         <p class='content container'>
            
-               The mechanism of "free flow and trustworthy data" is the top priority of cross-border cooperation.
+               "Data Free Flow with Trust" is the top priority for cross-border collaboration.
            
         </p>
       </a>
