--- a/zh-TW/tools/index.html
+++ b/zh-TW/tools/index.html
@@ -6,13 +6,13 @@
     <title>工具</title>
     <meta property="og:title" content="工具" />
     <meta name="author" content="PDIS" />
-    <meta property="og:locale" content="zh_TW" />
+    <meta property="og:locale" content="zh-TW" />
     <link rel="canonical" href="https://pdis.nat.gov.tw/zh-TW/tools/" />
     <meta property="og:url" content="https://pdis.nat.gov.tw/zh-TW/tools/" />
     <meta name="twitter:card" content="summary" />
     <meta property="twitter:title" content="工具" />
     <meta name="twitter:site" content="@TaiwanPDIS" />
-    <meta name="twitter:creator" content="@PDIS" />
+    <meta name="twitter:creator" content="@TaiwanPDIS" />
     <meta property="fb:admins" content="100014438376965" />
     <meta name="google-site-verification" content="uxXHtWt7-XyZrPJb9BznXlKOOKklt1D_TAIv1UW8VhM" />
     <script type="application/ld+json">{"headline":"工具","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/pdis-logo-final-inverse.png"},"name":"PDIS"},"url":"https://pdis.nat.gov.tw/zh-TW/tools/","author":{"@type":"Person","name":"PDIS"},"@type":"WebPage","@context":"https://schema.org"}</script>
