--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Public Digital Innovation Space - 公共數位創新空間</title>
     <meta name="description" content="We incubate and facilitate public digital innovation and service.">
     <meta property="og:title" content="Public Digital Innovation Space - 公共數位創新空間">
     <meta property="og:description" content="We incubate and facilitate public digital innovation and service.">
     <meta property="og:url" content="/">
-    <meta property="og:image" content="/images/pdis-team.jpg">
+    <meta property="og:image" content="{{ site.url }}{{ site.image }}">
     <meta property="og:type" content="article">
     <meta property="twitter:title" content="Public Digital Innovation Space - 公共數位創新空間" />
     <meta name="google-site-verification" content="uxXHtWt7-XyZrPJb9BznXlKOOKklt1D_TAIv1UW8VhM" />
