--- a/en/index.html
+++ b/en/index.html
@@ -430,7 +430,7 @@
         <h5 class="title">Trust is the key</h5>
         <p class='content container'>
            
-               The most assuring mode of operation is to a coalition formed by data holders and data users.
+               The most assuring mode of operation is a coalition formed by data holders and data users.
            
         </p>
       </a>
