deploy: c2a7c17df640681fe1b70cf3f31e25739d55f6ec

--- a/en/index.html
+++ b/en/index.html
@@ -427,10 +427,10 @@
             2023-11-23
           </time>
         </span>
-        <h5 class="title">Echoes of the past, sounds of the future</h5>
+        <h5 class="title">Echoes of the Past, Voices of the Future</h5>
         <p class='content container'>
            
-               If AI is properly built into digital infrastructure, it does have the opportunity to "help humans become better."
+               If AI is properly integrated into public infrastructures, it has the potential to help humanity become better.
            
         </p>
       </a>
