deploy: 745e92d0c791a54a667e1183557e3fa9343cab40

--- a/en/index.html
+++ b/en/index.html
@@ -427,10 +427,10 @@
             2023-12-21
           </time>
         </span>
-        <h5 class="title">Can &quot;super-intelligent alignment&quot; create safer AI?</h5>
+        <h5 class="title">Can Superalignment help AI safety?</h5>
         <p class='content container'>
            
-               AI systems that frequently produce hallucinations will no longer win the favor of investors.
+               AI systems with frequent hallucinations will come to be avoided by investors.
            
         </p>
       </a>
