deploy: 2b6d37ef34da616ab41a156aade673280ec6c7f1

--- a/en/index.html
+++ b/en/index.html
@@ -427,10 +427,10 @@
             2024-01-18
           </time>
         </span>
-        <h5 class="title">AI Adaptation</h5>
+        <h5 class="title">AI adaptation</h5>
         <p class='content container'>
            
-               Are the standards and definitions for assessing harm tied to a small group of people?
+               Are the standards and definitions for assessing harms are tied to a small group of people?
            
         </p>
       </a>
