--- a/en/index.html
+++ b/en/index.html
@@ -427,10 +427,10 @@
             2024-03-18
           </time>
         </span>
-        <h5 class="title">Democracy Summit: Promoting innovation that respects human rights</h5>
+        <h5 class="title">Summit for Democracy: Fostering right-respecting innovations</h5>
         <p class='content container'>
            
-               No democratic country is an island—especially Taiwan.
+               After all, no democracy is an island — not even Taiwan.
            
         </p>
       </a>
