deploy: b77e116559f95a6188c4d6e2e8e19ab2d1a34efe

--- a/en/index.html
+++ b/en/index.html
@@ -435,10 +435,10 @@
             2024-03-21
           </time>
         </span>
-        <h5 class="title">AI cure AI</h5>
+        <h5 class="title">AI against AI</h5>
         <p class='content container'>
            
-               Let the "digital signature" be as effective as a seal certificate, unique and cannot be counterfeited.
+               Digital signatures, like seal certificates, ensure uniqueness and preventing forgery.
            
         </p>
       </a>
