--- a/info/jedi/index.html
+++ b/info/jedi/index.html
@@ -191,7 +191,7 @@
     <div class="card-panel grey lighten-5 z-depth-1">
       <div class="row">
         <div class="col s8 offset-s2 m4">
-          <img src="/assets/avatar/jedi.png" alt="" class="circle responsive-img">
+          <img src="/assets/avatar/jedi.webp" alt="" class="circle responsive-img">
         </div>
         <div class="col s12 m8 black-text">
           <h1>
