--- a/zh-TW/contact/index.html
+++ b/zh-TW/contact/index.html
@@ -281,7 +281,7 @@
   <div class="card-panel grey lighten-5 z-depth-1 grid-item">
     <div class="row" style="margin: 0 -1em;">
       <div class="col s4">
-        <img src="/assets/avatar/jedi.png" alt="林克寰" class="circle responsive-img" loading="lazy">
+        <img src="/assets/avatar/jedi.webp" alt="林克寰" class="circle responsive-img" loading="lazy">
       </div>
       <div class="col s8">
         <h6><span>林克寰</span> <span lang="en">Jedi Lin</span></h6>
