deploy: 312ef6dc302afc1fd946993d5bb4cfa8e4af6e92

--- a/en/tools/index.html
+++ b/en/tools/index.html
@@ -242,7 +242,7 @@
       <p>Personas are personal images of fictional realities that describe a particular group of subjects. By drawing the behaviors, actions, and preferences of this character and similar people into “personal characters,” you can understand the group with this persona. The character of the character is displayed in the way of establishing a character, and the character of the character is not lost. \n Such role-playing helps ensure that work is always focused on the user, not an abstract description of their respective groups.</p>
 
       <p>
-         <a href="http://diytoolkit.org/tools/personas-2/">Persona</a> 
+         <a href="https://diy-toolkit.org/tools/personas/">Persona</a> 
       </p>
     </div>
     <div class="col l5 pull-l7 s12">
