--- a/zh-TW/tools/index.html
+++ b/zh-TW/tools/index.html
@@ -242,7 +242,7 @@
       <p>人物誌（Personas）是虛構出現實中的個人形象，用於描述目標受中的特定族群。透過把這個人物以及相似人群的行為、行動與喜好繪製成「人物角色」，就能以這個人物角色理解這群人。以建立人物角色的方式展現人物的特徵，就不會失去這個人物之所以成為該人物的細節。 這樣的角色扮演有助於確保工作始終專注在使用者上，而不是對他們相應群體的抽象描述。</p>
 
       <p>
-         <a href="http://diytoolkit.org/tools/personas-2/">人物誌</a> 
+         <a href="https://diy-toolkit.org/tools/personas/">人物誌</a> 
       </p>
     </div>
     <div class="col l5 pull-l7 s12">
